refactor(runtime): replace DefaultErrorHandler if-else cascade with exhaustive switch-pattern (#88)
Co-authored-by: Tomáš Samek <jerry.samek@gmail.com>